# fourmizRust

./: .gitignore  BACKLOG.md  CI.md  Makefile
.github/workflows/: build-release.yml  deploy.yml  quality-check.yml
backlog/: main.md
backlog/agent-biologie/: ALGO_GRADIENT.md  ALGO_WANDER.md  FEATURE_2_COMPORTEMENT.md
backlog/agent-core/: ALGO_SPATIAL_GRID.md  FEATURE_4_MOTEUR_CPU.md
backlog/agent-ui-ux/: FEATURE_1_VISIBILITE.md
backlog/agent-world/: ALGO_MAP_GEN.md  FEATURE_3_GENERATION_EVENTS.md
engine/: Cargo.toml  Dockerfile  build.rs
engine/src/: grpc.rs  main.rs  simulation.rs
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: HUD.tsx  LoadingScreen.tsx  SimulationCanvas.tsx
frontend/src/services/: api.ts
gateway/: Dockerfile  go.mod  go.sum  main.go
gateway/proto/: antsimulator.pb.go  antsimulator_grpc.pb.go
k8s/: engine.yaml  fourmiz-ingress.yaml  fourmiz-pvc.yaml  frontend.yaml  gateway.yaml
proto/: antsimulator.proto
