[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "time", "sync"] }
tokio-stream = "0.1.15"
hecs = "0.10"
rand = "0.8"
log = "0.4"
env_logger = "0.11"

[build-dependencies]
tonic-build = "0.12"
